--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(B_samp_fun)
 export(B_theta_til_samp_fun)
 export(Data_process)
 export(de_motif)
+export(res_ana)
 export(g_samp_fun)
 export(h_00)
 export(h_01)
