--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(Data_process)
 export(de_motif)
 export(res_ana)
 export(g_samp_fun)
+export(generate_samp)
 export(h_00)
 export(h_01)
 export(h_10)
@@ -20,6 +21,9 @@ export(logllk_fun_11)
 export(logllk_fun_one_seq)
 export(pi_A_theta_fun)
 export(pi_B_theta_til_G_fun)
+export(pred_A_samp_fun)
+export(pred_B_samp_fun)
+export(predict_demotif)
 export(prob_g_fun)
 export(prob_theta_fun)
 export(prob_theta_til_fun)
