--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(pi_B_theta_til_G_fun)
 export(pred_A_samp_fun)
 export(pred_B_samp_fun)
 export(predict_demotif)
+export(pred_res_ana)
 export(prob_g_fun)
 export(prob_theta_fun)
 export(prob_theta_til_fun)
